# quadruped-robot-ros2

./: .gitignore  README.md
src/admittance_reg/: CMakeLists.txt  package.xml
src/admittance_reg/src/: admittance_reg_test.cpp
src/dogbot_description/: CMakeLists.txt  package.xml
src/dogbot_description/config/: dogbot_bridge.yaml  dogbot_controllers.yaml
src/dogbot_description/launch/: display.launch.py  gazebo.launch.py  spawn.launch.py  spawn_dogbot.launch.py  start_sim.launch.py
src/dogbot_description/rviz/: urdf_gazebo_config.rviz
src/dogbot_description/sdf/: tutorial_robot.sdf
src/dogbot_description/urdf/: dogbot.urdf.xacro
src/dogbot_description/worlds/: empty.sdf
src/esp32_bridge/: CMakeLists.txt  package.xml
src/esp32_bridge/include/esp32_bridge/: udp_packet_format.hpp
src/esp32_bridge/src/: udp_bridge_receiver.cpp  udp_bridge_sender.cpp
src/experimental_scripts/: admittance_control.cpp
src/quadruped_control/: CMakeLists.txt  package.xml
src/quadruped_control/include/quadruped_control/: IK_solver.hpp  Trajectory_Generator.hpp  quadruped_config.hpp  test.py
src/quadruped_control/src/: IK_solver.cpp  Trajectory_Generator.cpp  quadruped_control.cpp
src/quadruped_feedback/: package.xml  setup.cfg  setup.py
src/quadruped_feedback/quadruped_feedback/: debug_trajectory_node.py
src/quadruped_servotranslator/: package.xml  setup.cfg  setup.py
src/quadruped_servotranslator/quadruped_servotranslator/: servo_translator.py
src/quadruped_servotranslator_cpp/: CMakeLists.txt  package.xml
src/quadruped_servotranslator_cpp/src/: servotranslator.cpp
src/quadruped_teleop/: package.xml  setup.cfg  setup.py
src/quadruped_teleop/quadruped_teleop/: control_panel.py  teleop_keyboard.py
src/quadruped_wifireceiver/: CMakeLists.txt  package.xml
src/quadruped_wifireceiver/include/quadruped_wifireceiver/: udp_packet_format.hpp
src/quadruped_wifireceiver/src/: udp_bridge_receiver.cpp
src/quadruped_wifisender/: CMakeLists.txt  package.xml
src/quadruped_wifisender/src/: wifisender.cpp
