<?xml version="1.0"?>
<package format="3">
  <name>quadruped_feedback</name>
  <version>0.0.0</version>
  <description>Debug trajektorii D dla robota psa</description>
  <maintainer email="antoni@todo.todo">antoni</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>